--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.data.mongodb.uri=mongodb://root:password@host_ip:27017/demo
+spring.data.mongodb.uri=mongodb://root:password@localhost:27017/demo
 server.port=8082
